implement Stephen's edits

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -57,17 +57,17 @@ When two parties are engaged in conflict and each distrusts the other's ability 
 
 \section{Introduction} 
 
-In negotiations with its neighbors, Israel is hesitant to give certain concessions. The Golan Heights, captured from Syria during the 1967 War, is a particular point of contention in Israeli-Syrian relations. While the Golan Heights does not have the West Bank’s historic or religious importance, Israel values it for its highly strategic location. The Golan Heights could be a useful concession, but Israel senses that were she to give over the land, Syria may ultimately use the concession against them. This same hesitancy exists with the West Bank settlements. Many are located on hilltops that could offer strategic military outposts for forces hostile to Israel. When it occasionally abandons settlements, Israel generally dismantles all infrastructure, including water and electricity, and bulldozes the buildings. Although inefficient, this reduces the possibility of those settlements being used against Israeli interests. Without trust, the most efficient concessions often are not made.
+In negotiations with its neighbors, Israel is hesitant to give certain concessions. The Golan Heights, captured from Syria during the 1967 War, is a particular point of contention in Israeli-Syrian relations. While the Golan Heights does not have the West Bank’s historic or religious importance, Israel values it for its highly strategic location. The Golan Heights could be a useful concession, but Israel senses that were she to give over the land, Syria may ultimately use the concession against her. This same hesitancy exists with the West Bank settlements. Many are located on hilltops that could offer strategic military outposts for forces hostile to Israel. When she occasionally abandons settlements, Israel generally dismantles all infrastructure, including water and electricity, and bulldozes the buildings. Although inefficient, this reduces the possibility of those settlements being used against Israeli interests. Without trust between negotiating parties, the most efficient concessions often are often difficult to arrange.
 
-In both active wars and long-simmering conflicts, settlement negotiations often occur simultaneously with continued fighting. This is true in non-violent disputes as well, such as long-running episodes of geo-strategic competition: parties engage in costly conflict while they negotiate, foregoing the value of the public goods they could create through cooperation. If settlement can be achieved, additional costs of conflict -- including additional death and destruction -- are averted. Third-party mediators often participate in such negotiations, but the literature remains divided regarding how and under what conditions mediation can be effective (e.g., Bercovitch 2000; Greig 2005a; Beardsley et al. 2006; Duursma 2020).  This paper sheds new light on the productive role mediators can play by examining their effect on the efficiency of the concessions that conflict participants can offer. In our context, the efficiency of a concession is determined by how much of the material value of the concession is intact when the recipient receives it. If the party who gives the concession destroys any of its material value, the concession is deemed to be less than fully efficient.
+In both active wars and long-simmering conflicts, settlement negotiations often occur simultaneously with continued fighting. This is true in non-violent disputes as well, such as long-running episodes of geo-strategic competition: parties engage in costly conflict while they negotiate, foregoing the value of the public goods they could create through cooperation. If settlement can be achieved, additional costs of conflict -- including additional death and destruction -- are averted. Third-party mediators often participate in such negotiations, but the literature remains divided regarding how and under what conditions mediation can be effective (e.g., Bercovitch 2000; Greig 2005a; Beardsley et al. 2006; Duursma 2020).  This paper sheds new light on the productive role mediators can play by examining their effect on the efficiency of the concessions that conflict participants can offer. In our context, the efficiency of a concession is determined by how much of the concessions's material value is intact when the recipient receives it. If the party who gives the concession destroys any of its material value, the concession is deemed to be less than fully efficient.
 
-We introduce a two-sided signaling model followed by a repeated Prisoner's Dilemma in which concessions can provide future value to the recipient and/or serve as a signal that provides the recipient with information about the type of player the conceding state is. We use this model to show that concerns that concessions could be used against the giver in the future can undermine cooperation. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to a settlement. Perhaps more importantly, the mediator can also sometimes facilitate settlement when the negotiating parties cannot achieve it through bilateral interaction. In other words, commitment is essentially a far-sighted preference that allows cooperation to emerge, uncertainty can result in missed opportunities for cooperation, and concessions and mediation can facilitate conflict settlement and the provision of public goods.
+We introduce a two-sided signaling model followed by a repeated Prisoner's Dilemma in which concessions can provide future value to the recipient and/or serve as a signal that provides the recipient with information about the type of player the conceding state is. We use this model to show that concerns surrounding the possibility that concessions could be used against the giver in the future can undermine cooperation. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to a settlement. Perhaps more importantly, the mediator can also sometimes facilitate settlement when the negotiating parties cannot achieve it through bilateral interaction. In other words, commitment is essentially a far-sighted preference that allows cooperation to emerge, uncertainty can result in missed opportunities for cooperation, and concessions and mediation can facilitate conflict settlement and the provision of public goods.
 %The sentence above literally parrots the editor's words back to them. Too on the nose?
 
 %Attempting to add in the China-US case in a prominent way. The prose is more awkward than I would like still. - March 13, 2023 BG
 Three archetypal situations illustrate the significance and difficulty of efficient concession-making in dispute settlement.  The first is the case of disarmament, the second is the concession of strategically valuable territory, and the third is the export of advanced technology to a strategic rival. %In each case, efficient concessions are difficult to make because the item conceded may be used by the recipient to bolster their military capabilities, altering the balance of power in the ongoing conflict. Also true in each case, if dispute settlement is achieved, a public good is produced -- peace in the first two cases and innovation and growth in the civilian economy in the third case.  
 
-Barbara Walter identified disarmament as the ``critical barrier to civil war settlement'' (1997). Particularly in conflicts between a rebel group and a central government, the best-achievable negotiated settlement often involves policy concessions by the government in exchange for disarmament and recognition of government authority by the rebels. Disarmament by rebels is an efficient concession if fully-operational weapons are turned over to the central government for its own use, while disarmament accompanied by decommissioning is inefficient because the value of the arms is destroyed. Disarming and turning over fully functional weapons is an incredibly difficult concession for rebels to make: once they turn over their arms, they lose future bargaining leverage and have no guarantee that their own weapons won't later be used against them. If the rebels can instead decommission those weapons, an important stumbling block to peace is removed.\footnote{Other stumbling blocks remain, including the fact that government retains its weapons. Thus, credible commitment on the part of the government remains difficult, even if decommissioning occurs.} Peace may therefore be possible with inefficient concessions where it is impossible with efficient concessions.\footnote{Walter's approach is part of a much broader literature on the bargaining model of war that looks at concessions and asymmetric information, including  Fearon (1996), Powell (1996a and 1996b, 2006), Slantchev (2011) and Arena (2013).}
+Barbara Walter identified disarmament as the ``critical barrier to civil war settlement'' (1997). Particularly in conflicts between a rebel group and a central government, the best-achievable negotiated settlement often involves policy concessions by the government in exchange for disarmament and recognition of government authority by the rebels. Disarmament by rebels is an efficient concession if fully-operational weapons are turned over to the central government for its own use, while disarmament accompanied by decommissioning is inefficient because the value of the arms is destroyed. Disarming and turning over fully functional weapons is an incredibly difficult concession for rebels to make: once they turn over their arms, they lose future bargaining leverage and have no guarantee that their own weapons will not be used against them later. If the rebels can instead decommission those weapons, an important stumbling block to peace is removed.\footnote{Other stumbling blocks remain, including the fact that the government retains its weapons. Thus, credible commitment on the part of the government remains difficult, even if decommissioning occurs.} Peace may therefore be possible with inefficient concessions where it is impossible with efficient concessions.\footnote{Walter's approach is part of a much broader literature on the bargaining model of war that looks at concessions and asymmetric information, including  Fearon (1996), Powell (1996a and 1996b, 2006), Slantchev (2011) and Arena (2013).}
 
 Control of strategically valuable territory can pose similar challenges in both civil and interstate wars. Even if transferring control of strategically valuable territory creates the best chance for peace, its transfer often involves a substantial risk that the territory will provide military advantage in a future conflict. Following the 1992 war between Armenia and Azerbaijan over the disputed region of Ngorno-Karabakh, Armenia retained control of a significant amount of Azeribaijani territory that neither the Armenian government nor the Karabakh government viewed to be part of its homeland. Azerbaijan, however, valued control of the territory greatly as the home of Azeri residents and wished to govern the territory. Thus, it might have been efficient in the mid-1990s for the Armenian/Karabahk side to cede control of that territory to Azerbaijan as part of a deal in which Azerbaijan recognized Karabakh's independence.  However, that territory was strategically valuable, including territory on both sides of the Lachin Corridor, which connects Ngorno-Karabakh and Armenia. Azerbaijani control of the territory surrounding the corridor would empower Azerbaijan to seize military advantage in the future and cut off land travel between Ngorno-Karabakh and Armenia.  The territory was not conceded and the conflict persisted in costly stalemate for almost twenty years until war broke out anew in 2020. 
 
@@ -75,7 +75,7 @@ In our third archetypal example, under both the Trump and Biden administrations,
 
 In all three of these archetypal examples, cooperative/peaceful outcomes are extremely challenging to reach. Walter (1997) observes empirically that, due to the difficulty of making efficient disarmament concessions, civil wars tend to end on the battlefield, rather than through negotiated settlement. Interstate wars over territory are similarly prone to violent, rather than negotiated, resolution (Hensel 1996), and the trajectory of competition and cooperation between the US and China remains highly uncertain. Can mediation offer a path to more settlement, peace, and prosperity in these challenging contexts? 
 
-This paper provides an explanation for why efficient concessions are sometimes impossible to make. It also revises our understanding of why inefficient concessions can sometimes be beneficial and how mediators can both help increase the efficiency of concessions and make cooperation possible. Weapons, strategically valuable territory, and the sharing of advanced technology will not be conceded if the conceding side fears that these items may be used in future attacks against them. Countries are reluctant to make concessions that can be used against them in latter rounds of conflict or negotiation. One way to mitigate the risk of dangerous concessions is to destroy the future value of the concession---e.g. decommission weapons, attempt to reduce the strategic value of the territory being conceded, or only allow trade in less advanced technologies or technologies without military applications. Another option, and the one on which we focus in this paper, is third-party mediation. We use this model to demonstrate that a third-party mediator can facilitate negotiated settlement by increasing trust and enabling disputants to make more efficient concessions. The mediator does this by removing therisk that concessions might be used against the giver in the future. 
+This paper provides an explanation for why efficient concessions are sometimes impossible to make. It also revises our understanding of why inefficient concessions can sometimes be beneficial and how mediators can both help increase the efficiency of concessions and make cooperation possible. Weapons, strategically valuable territory, and the sharing of advanced technology will not be conceded if the conceding side fears that these items may be used in future attacks against them. Countries are reluctant to make concessions that can be used against them in latter rounds of conflict or negotiation. One way to mitigate the risk of dangerous concessions is to destroy the future value of the concession---e.g. decommission weapons, attempt to reduce the strategic value of the territory being conceded, or only allow trade in less advanced technologies or technologies without military applications. Another option, and the one on which we focus in this paper, is third-party mediation. We use this model to demonstrate that a third-party mediator can facilitate negotiated settlement by increasing trust and enabling disputants to make more efficient concessions. The mediator does this by only requiring concessions of negotiating parties who are able to cooperate, thereby removing the risk that concessions might be used against the giver in the future.
 
 %While an integral part of the literature on conflict, concessions have been only partially addressed by theoretical research. The broader literature that attempts to model war has included concessions as part of bargaining, but has not explicitly considered the role of concessions in achieving peace. Schelling's \emph{Arms and Influence} (1966) modeled war with a game theoretic framework, and Powell (1999) has also defended the use of modeling in understanding war. Fearon (1996), Powell (1996a and 1996b, 2006) and others consider war to be a bargaining failure, caused by commitment problems and asymmetric information. When the assets that are the object of the bargaining confer future power, a lack of credible commitment, or trust, can create a holdup problem that prevents the optimal level of cooperation (Fearon 1996). %[OUTSIDE THE WAR CONTEXT..., ???]
 
@@ -87,7 +87,7 @@ We model a party's ability to cooperate as private information. A high type is a
 
 In our model, concessions may act as signals or as an end in themselves -- or as both simultaneously. One contribution of this paper is that it allows concessions to have future material value, signaling value, and both. We will show that when concessions have both signaling and future material value, some of the material value of the concessions may be purposefully destroyed and thus inefficiencies can emerge. Another contribution is that the way we model concessions does not require countries to make an agreement that requires credible commitment, as is common in bargaining models. Instead, countries willingly provide a concession if they expect the signal it sends to provide a benefit in terms of future cooperation and public good provision.\footnote{When mediation is required to achieve cooperation in the model, it relies upon a manipulative mediator to enforce the required level of concessions.}
 
-In analyzing both the signaling and material value of concessions, an extensive literature on gift giving is particularly helpful. Like concessions, costly gifts have been shown to have a valuable role in relationship building. And the gift giving literature, more so than the concessions literature, focuses specifically on the issue of efficiency. Inefficiency is defined for the purposes of this paper as giving a gift (i.e. a concession) that is more costly to the giver than it is valuable to the recipient. 
+In analyzing both the signaling and material value of concessions, an extensive literature on gift giving is particularly helpful. Like concessions, costly gifts have been shown to have a valuable role in relationship building. Furthermore, the gift giving literature---more so than the concessions literature---focuses specifically on the issue of efficiency. Inefficiency is defined for the purposes of this paper as giving a gift (i.e. a concession) that is more costly to the giver than it is valuable to the recipient. 
 
 %I need to add a bit about historical international relations, and a couple of cites, to the two paragraphs below. BG 3-13-2023
 Often, inefficient gifts occur in the formative stages of relationships or in immature relationships (Camerer 1988). Gifts given in established relationships, such as wedding presents or spousal gifts, are more likely to be cash gifts or efficient gifts that are specifically requested or selected from a registry. Since inefficient gift giving is more likely involved in nascent relationships and partnerships, it is natural to suppose that inefficient gifts play a signaling role in addition to the material value of transferring the gift's inherent worth. 
@@ -96,7 +96,7 @@ In efforts to explain the existence of gift giving,  Camerer (1988) and Van de V
 
 Camerer's model includes players that have one period to signal before they decide whether to partner. There are two types, high types and low types, and a separating equilibrium is characterized by a threshold gift that is necessary for high types to reveal themselves while low types do not send a gift. Two high types who have just received each other's gifts will then choose to create a partnership with a positive payoff; other combinations will not find it economical to form a partnership.
 
-Camerer shows that in this general formulation, a costly signaling model will always yield efficient gifts.\footnote{In an environment with repeated opportunities for concessions Watson (1999) is able to show that a strong relationship can be reached by starting with small ``gifts'' and increasing their size as the relationship becomes more committed. See Van de Ven (2000) for an overview of this literature.} In order to explain inefficiency, Camerer adds an additional pre-play period where players must pay a cost in order to enter the game and send and receive gifts. If types separate in the pre-play period with low types not being willing to pay, high types are saved the cost of sending a signal to low types in the main game.  High types would, in some parameterizations, be given incentives to give inefficient equilibrium gifts in the main game in order to lower the low types' expected payoff of playing to below the pay-to-play fee. Such an action can keep out the low types and this can raise the expected payoff for a high type by saving on the gifts given. 
+Camerer shows that in this general formulation, a costly signaling model will always yield efficient gifts.\footnote{In an environment with repeated opportunities for concessions, Watson (1999) is able to show that a strong relationship can be reached by starting with small ``gifts'' and increasing their size as the relationship becomes more committed. See Van de Ven (2000) for an overview of this literature.} In order to explain inefficiency, Camerer adds an additional pre-play period where players must pay a cost in order to enter the game and send and receive gifts. If types separate in the pre-play period with low types not being willing to pay, high types are saved the cost of sending a signal to low types in the main game.  High types would, in some parameterizations, be given incentives to give inefficient equilibrium gifts in the main game in order to lower the low types' expected payoff of playing to below the pay-to-play fee. Such an action can keep out the low types and this can raise the expected payoff for a high type by saving on the gifts given. 
 
 %Prendergast and Stole (2001) provide a second explanation for inefficient gifts. The authors explain inefficient gift giving by modeling the utility of matching. That is, if players are of a like mindset they get an extra benefit so they are willing to take the risk of giving the wrong gift.
 
@@ -105,7 +105,7 @@ but does so using a very different explanation for inefficiency. The basic model
 
 This demonstration of the incentives for inefficient concessions leads to a new explanation for the role of mediators in conflict resolution. Third party involvement is ubiquitous in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others find mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation difficult. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006), as does the legitimacy of the mediator (e.g., Duursma 2020) and the timing of the mediator's intervention (Greig 2005a).
 
-It is essential to focus more precisely on the specific actions and environments that make use of particular types of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has manipulative abilities. Parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008); we thus model parties to a conflict who can benefit from seeking mediation in order to overcome mistrust.\footnote{Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010; Beardsley and Lo 2014).}
+It is essential to focus more precisely on the specific actions and environments that make use of particular types of mediation. To this end, this paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has manipulative abilities. Parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008); we thus model parties to a conflict who can benefit from seeking mediation in order to overcome mistrust.\footnote{Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010; Beardsley and Lo 2014).}
 
 These empirical results have until recently lacked strong theoretical foundations. Mediation is not uncommon, but we are only beginning to understand why actors use it. Recently, mediation has begun to be modeled using mechanism design for settings where militarization or the resolve to fight are private information (Bester and Warneryd 2006; Fey and Ramsay 2009, 2010 and 2011; Horner et. al. 2010; Meirowitz et al. 2012, 2019). In particular, Meirowitz et al. 2019 shows that---when asymmetric information is about the level of militarization---a `Myerson' mediator can circumvent the incentives for militarization that arise in unmediated peace talks and improve the changes for peace. This paper expands the theoretical literature by modeling the role of a manipulative mediator when the information asymmetry is about parties' abilities to commit to cooperation and concessions have future material value that could be used to harm the giver. Here, a mediator can achieve peace or the provision of other public goods (1) in situations where bilateral concessions cannot, and (2) with concessions that are more efficient when bilateral concessions must be inefficient to achieve peace. 
 
@@ -190,7 +190,7 @@ Details of the analysis are in the Appendix. We begin by characterizing the conc
 \end{lemma}
 \emph{Proof:} See Appendix.
 
-Low types don't give gifts in this separating equilibrium because the gift wouldn't serve any purpose: the low type will be identified through the separating behavior of the high types and there is thus nothing to gain.\footnote{The transmission of information about each country's type is, by definition, essential for the existence of a \emph{concessions separating equilibrium}. Thus, there cannot exist a \emph{concessions semi-separating equilibrium} where the low type gives a concession with strictly positive probability; the concessions would not transmit the information required to build trust. If no information is transmitted, then the high type has no incentive itself to give a concession. Therefore, there cannot be a semi-separating equilibrium with the low type mixing between strictly positive and zero concessions and the players separating in the repeated game as in the \emph{no-concessions separating equilibrium}.}
+Low types don't give gifts in this separating equilibrium because the gift would fail to serve any purpose: the low type will be identified through the separating behavior of the high types and there is thus nothing to gain.\footnote{The transmission of information about each country's type is, by definition, essential for the existence of a \emph{concessions separating equilibrium}. Thus, there cannot exist a \emph{concessions semi-separating equilibrium} where the low type gives a concession with strictly positive probability; the concessions would not transmit the information required to build trust. If no information is transmitted, then the high type has no incentive itself to give a concession. Therefore, there cannot be a semi-separating equilibrium with the low type mixing between strictly positive and zero concessions and the players separating in the repeated game as in the \emph{no-concessions separating equilibrium}.}
 
 \begin{theorem}
 \emph{Concessions Separating Equilibrium (CSE)}
@@ -204,7 +204,7 @@ Low types don't give gifts in this separating equilibrium because the gift would
 
 This `best' \emph{concessions separating equilibrium}, where `best' is from the standpoint of high-type welfare, is justified by appeal to the Intuitive Criterion equilibrium refinement, in which out of equilibrium beliefs put zero weight on types that can never gain from deviating.
 
-Interestingly, the patience threshold for this equilibrium to exist, $\de^c = \frac{W}{T+D}$, is the same as the threshold for the complete information repeated game in which deviating from ``Trust'' is discouraged through grim trigger punishments.\footnote{When $\de = \frac{W}{T+D}$, there is also a semi-separating equilibrium where only some high types give a concession. Here, high types give a smaller expected concession and trade off a lower probability of achieving cooperation. We will focus on the pure \emph{concessions separating equilibrium} in the analysis below because it provides the best chance for Cooperation and is possible over a much larger portion of the parameter space.} Using concessions to separate the types therefore can be seen as making up for the imperfect information in this setting.
+Interestingly, the patience threshold for this equilibrium to exist, $\de^c = \frac{W}{T+D}$, is the same as the threshold for the complete information repeated game in which deviating from ``Trust'' is discouraged through grim trigger punishments.\footnote{When $\de = \frac{W}{T+D}$, there is also a semi-separating equilibrium where only some high types give a concession. Here, high types give a smaller expected concession and trade off a lower probability of achieving cooperation. We will focus on the ff \emph{concessions separating equilibrium} in the analysis below because it provides the best chance for Cooperation and is possible over a much larger portion of the parameter space.} Using concessions to separate the types therefore can be seen as making up for the imperfect information in this setting.
 
 We complete our analysis of the \emph{concessions separating equilibrium} by comparing it to the \emph{no-concessions separating equilibrium} in Section~\ref{sec:ncse}.
 
@@ -226,7 +226,7 @@ One example of an equilibrium involving concessions is Israel and Egypt at the C
 \subsection{Concessions with Material Value}
 We now model concessions to have real future material value that can either help or harm the giver. To be clear, in Sections~\ref{sec:model} and \ref{sec:bench}, the gift only benefits the party who receives it in the period in which it is received, that is, Period 0. In this section, we assume that there is an additional value from the gift in each period of the repeated game, that is, Period 1 and onward.
 
-The intuition for this addition to the model is that the country that receives the concessions can use them to build up their military or to build up their civil society, including through the provision of public goods. The recipient using concessions to build military strength hurts the giver of the concessions in war; the recipient using the concessions to strengthen civil society helps the giver in peace. The Golan heights is such an example: if Syria maintains peaceful relations with Israel, the Golan Heights is a reasonable concession to make, but if Syria renews military conflict with Israel, surrender of the strategic land would be disastrous for Israel. 
+The intuition for this addition to the model is that the country that receives the concessions can use them to build up their military or to build up their civil society, including through the provision of public goods. The recipient using concessions to build military strength hurts the giver of the concessions in war; the recipient using the concessions to strengthen civil society helps the giver in peace. The Golan Heights is such an example: if Syria maintains peaceful relations with Israel, the Golan Heights is a reasonable concession to make, but if Syria renews military conflict with Israel, surrender of the strategic land would be disastrous for Israel. 
 
 We add two elements to the benchmark model in Section 2 in order to incorporate future material value. The first is an additional decision for the negotiating parties. In Period 0, each country makes a decision about how to allocate the value of any concession it receives between military and civil society. $\alpha_i$ is the portion of the received concession that country $i$ chooses to dedicate to civil society; $(1- \alpha_i$) is the portion country $i$ dedicates to military buildup. This decision is a simple optimization problem for each country. Parameters are common knowledge so the result of this decision is well known should the country's type be known.
 
@@ -281,7 +281,7 @@ The comparative statics for the patience threshold $\de^c = \frac{W}{T+D}$ are s
 
 There are, however, two variables that do not affect the patience threshold in the no material value case that \textit{do} affect the threshold when there is future material value: $\de_l$ and $p$. When the low type's patience level $\de_l$ increases, the high type's patience threshold increases; this is because a more patient low type requires a larger gift in order not to mimic the high type. In the case of no material value, the low type's discount factor doesn't enter into the gift, and therefore it doesn't influence how much patience is required for cooperation.
 
-The other variable that influences the patience threshold in the case of future value is $p$, the proportion of cooperative types in the population. Although the gift in the no-future-material-value case \emph{is} an increasing function of $p$, it is a linear function of $p$ just like the variables $T$, $W$, and $D$. Thus the cost of paying the gift and the direct benefits in the repeated game increase at the same rate so that the likelihood of cooperative types does not vary in $p$ when gifts have no future material value. In the future-material-value case, the size of the gift required to separate the high types from the low types increases more than linearly in $p$ and thus faster than the other terms. Therefore the patience threshold in the future-material-value case increases as $p$ increases. That is, the cost of giving the gift weighs more heavily in the decision to cooperate relative to the material costs and benefits, requiring states to be more patient to separate and thus reducing the likelihood of cooperative types.\footnote{For the comparative statics calculations, see Appendix~\ref{ap:mat_val}.} 
+The other variable that influences the patience threshold in the case of future value is $p$, the proportion of cooperative types in the population. Although the gift in the no-future-material-value case \emph{is} an increasing function of $p$, it is a linear function of $p$ just like the variables $T$, $W$, and $D$. Thus the cost of paying the gift and the direct benefits in the repeated game increase at the same rate so that the likelihood of cooperation does not vary in $p$ when gifts have no future material value. In the future-material-value case, the size of the gift required to separate the high types from the low types increases more than linearly in $p$ and thus faster than the other terms. Therefore the patience threshold in the future-material-value case increases as $p$ increases. That is, the cost of giving the gift weighs more heavily in the decision to cooperate relative to the material costs and benefits, requiring states to be more patient to separate and thus reducing the likelihood of cooperative types.\footnote{For the comparative statics calculations, see Appendix~\ref{ap:mat_val}.} 
 
 
 \subsection{Material Value of Concession can be Destroyed}
